--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>About</title>
+        <title>Edward Roberts</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,77 +13,77 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/boilerplate.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/main2.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 
-        <!-- Global Site Tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105797301-1"></script>
         <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments)};
-          gtag('js', new Date());
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-          gtag('config', 'UA-105797301-1');
+            ga('create', 'UA-105797301-1', 'auto');
+            ga('send', 'pageview');
         </script>
-
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
-        <div id="header-container">
-            <header>
-                <h1>EDWARD ROBERTS</h1>
-                <nav id="mainNav">
-                    <ul id="mainNavList">
+        <div class="nav-container">
+            <header  class="main-nav">
+                <h3 class="nav-title">Edward Roberts</h3>
+                <nav>
+                    <ul class="main-nav-list">
                         <li>
-                            <h2>
-                                <a href="index.html">Work</a>
-                            </h2>
+                            <a href="index2.html" class="nav-button-font" id="Work">Work</a>
                         </li>
                         <li>
-                            <h2>
-                                <a href="About.html">About</a>
-                            </h2>
+                            <a href="About.html" class="nav-button-font">About</a>
                         </li>
                         <li class="button">
-                            <a class="btn-open" href="#"></a>
+                            <a class="btn-open nav-button-font" href="#"></a>
                         </li>
                     </ul>
                 </nav>
                 <div class="overlay">
                     <div class="wrap">
                         <ul class="wrap-nav">
-                            <li type="button">
-                                <h2>
-                                    <a href="index.html">Work</a>
-                                </h2>
+                            <li>
+                                <a href="index2.html">Work</a>
                             </li>
-                            <li type="button">
-                                <h2>
-                                    <a href="About.html">About</a>
-                                </h2>
+                            <li>
+                                <a href="About.html">About</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </header>
         </div>
-        <div id="main-container">
-            <div id="main-wrapper" class="clearfix">
-                
+        <div class="main-container">
+            <div class="main-wrapper" class="clearfix">        
+                <h1>A Brief Autobiography</h1>
+                <div class="overview-content">
+                    <figure class="one-third-aside">
+                        <img src="img/selfie.jpg">
+                    </figure>
+                    <div class="two-thirds-description">
+                        <p>Born in Atlanta; grew up in Albuquerque; living currently in Seattle. I used to think I would be an engineer that would spend my career either destroying carbon-fiber prototypes with immense forces, or creating polymer nano-fibers with electrical potentials. </p>
+                        <p>Somewhere along the way though, I got tempted into design by a couple of friends. They pointed out I always enjoyed making things. Whether it was repairing an used bike, molding a clay pot, or casting a yttria-stabilized zirconia mug, I loved making and designing. It seemed natural to move into a field where I would start making the experience itself. So here I am, a Master of Human-Computer Interaction + Design from the University of Washington, practicing the user centered design process: how to uncover people’s stories, design new experiences, and implementing them well.</p>
+                    </div>
+                </div>
             </div>
         </div>
-        <div id="footer-container">
+        <div class="footer-container">
             <footer>
-                <a href="mailto:edparo83@gmail.com" target="_blank" class="hvr-icon-grow" aria-label="Email">
-                    <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/edwardproberts/" class="hvr-icon-grow" aria-label="LinkedIn">
-                    <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
-                </a>
+                <figure class="section-separator">
+                    <img src="img/separator.png">
+                </figure>
+                <div class="social-footer">
+                    <a href="mailto:edparo83@gmail.com" target="_blank" class="social-icon" aria-label="Email">
+                        <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/edwardproberts/" target="_blank" class="social-icon" aria-label="LinkedIn">
+                        <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+                    </a>
+                </div>
             </footer>
         </div>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
